# python-spot-client

./: .gitignore  LICENSE  README.md  SUMMARY.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
docs/: Makefile  api_reference.rst  conf.py  index.rst
spot_api/: __init__.py  client.py  enums.py  models.py
src/spot_api/: __init__.py  client.py  enums.py  models.py
tests/: test_spot_api.py
