[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-spot-client"
version = "0.1.0"
description = "Asynchronous client for the SPOT device API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "srichs", email = "srichs@pm.me"},
]
dependencies = [
    "httpx>=0.24.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.2",
    "furo>=2023.7.26",
]
test = [
    "pytest>=7.4",
]
lint = [
    "black>=24.0,<25.0",
    "mypy>=1.6",
    "ruff>=0.1.5",
]

[project.urls]
Homepage = "https://github.com/srichs/python-spot-client"

[tool.black]
target-version = ["py311"]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
